Bug 273094 - (REGRESSION 273633@main)Text layout changes when pointer hovers over content
Summary: (REGRESSION 273633@main)Text layout changes when pointer hovers over content
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-04-22 15:48 PDT by zalan
Modified: 2024-04-22 18:52 PDT (History)
4 users (show)

See Also:


Attachments
[fast-cq]Patch (3.52 KB, patch)
2024-04-22 15:50 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2024-04-22 15:48:22 PDT
<rdar://126832427>
Comment 1 zalan 2024-04-22 15:50:02 PDT
Created attachment 471053 [details]
[fast-cq]Patch
Comment 2 EWS 2024-04-22 18:52:04 PDT
Committed 277851@main (35e0f13b0178): <https://commits.webkit.org/277851@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 471053 [details].