(REGRESSION 273633@main)Text layout changes when pointer hovers over content https://bugs.webkit.org/show_bug.cgi?id=273094

Reviewed by Antti Koivisto.

In order to exercise the fast codepath for intrinsic width computation,
in addition to the block root the ancestor inline boxes also need eligible styles.

* LayoutTests/fast/inline/shrink-to-fit-with-inline-box-with-word-spacing-expected.html: Added.
* LayoutTests/fast/inline/shrink-to-fit-with-inline-box-with-word-spacing.html: Added.
* Source/WebCore/layout/formattingContexts/inline/IntrinsicWidthHandler.cpp:
(WebCore::Layout::IntrinsicWidthHandler::IntrinsicWidthHandler):

Canonical link: https://commits.webkit.org/277851@main